# Financer

./: Idea.docx  README.md
.github/workflows/: ci.yml  frontend-ci.yml
backend/: .pre-commit-config.yaml  money_tracker.db  requirements.txt  seed_data.py
backend/app/: crud.py  database.py  main.py  models.py  schemas.py
backend/app/tests/: test_main.py
docs/: Idea.docx  Idea.md
financer-backend/: README.md  pyproject.toml
financer-backend/financer_backend/: main.py
financer-frontend/: package-lock.json  package.json
financer-frontend/src/pages/MainPage/: index.tsx
frontend/: .pre-commit-config.yaml  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: BalanceChart.tsx  BalanceList.test.tsx  BalanceList.tsx  CreateBalanceItem.tsx  EditBalanceItem.tsx
