[tool.poetry]
name = "financer-backend"
version = "0.1.0"
description = ""
authors = ["Ben Sembira <ben.sembira.1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.13.0"
fastapi = "^0.115.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
